# pygallery

./: .gitignore  LICENSE  README.md  dev-environment.yml  pyproject.toml  tasks.py
.github/workflows/: pages.yml
doc/: .gitignore  _head.py  conf.py  index.md  refs.bib
doc/_static/: switcher.json
doc/about/: index.md
doc/chaos/: index.md
doc/deploy/: index.md
doc/deploy/nuitka/: index.md
doc/deploy/pdm/: index.md
doc/deploy/pdm/plugin/: index.md
doc/deploy/pdm/pyproject/: index.md
doc/deploy/pdm/usage/: index.md
doc/faqs/: index.md
doc/faqs/matplotlib/: index.md  text-path.ipynb
doc/faqs/matplotlib/Mathtext/: demo.ipynb  fontfamily.ipynb  index.md  placing-text-boxes.ipynb  text-with-non-latin-glyphs.ipynb
doc/jupyter/: index.md
doc/libs/: index.md  sched.ipynb
doc/libs/IPython/: custom-magics.ipynb  embedding.ipynb  index.md  magic-cmd.ipynb
doc/libs/ModernGL/: index.md  install.rst  intro.rst
doc/libs/contextvars/: index.md  intro.ipynb
doc/libs/matplotlib/shapes-collections/: artist_reference.ipynb
doc/libs/multigrid/: index.md
doc/libs/numpy/: absolute-beginners.ipynb  broadcasting.rst  copies.rst  creation.rst  index.md  indexing.rst  interoperability.rst  intro.ipynb
doc/libs/ray/: index.md
doc/libs/text/: index.md
doc/libs/tkinter/: index.md  thread.ipynb
doc/news/: draft.md
doc/pythonx/: index.md
doc/pythonx/basic/: index.md
doc/pythonx/config/: index.md
doc/pythonx/faqs/: index.md
doc/pythonx/refs/: index.md
doc/study/: index.md
doc/study/project/: index.md
doc/tasks/: index.md
doc/tasks/MarkItDown/: index.md
doc/tasks/controlflow/: index.md  intro.ipynb
doc/tasks/manim/: building_blocks.ipynb  examples.ipynb  index.md  output_and_config.rst  quickstart.ipynb
doc/tasks/nbgrader/: highlights.ipynb  index.md  installation.rst
doc/tasks/prefect/: index.md  intro.ipynb
doc/tasks/pycairo/: examples.ipynb  index.md  intro.ipynb  numpy.ipynb  pillow.ipynb  pygame.ipynb
doc/topics/: index.md
doc/topics/chaos/: index.md
doc/topics/concurrent/: async-task.ipynb  awaitable.ipynb  coroutine.ipynb  display-date.ipynb  future.ipynb  futures.ipynb  index.md  task.ipynb
doc/topics/meta-prog/: index.md
doc/topics/pytables/: filenode.ipynb  handle.ipynb  index.md  intro.ipynb  start.ipynb  tree.ipynb
doc/topics/sphinx/: index.md
doc/topics/tools/: index.md
src/pybook/: __init__.py
src/pygallery/: __init__.py
tests/gif/: gif.py  main.ipynb
(+126 files in other folders)
